prevent horizontal scroll

--- a/src/css/Intro.module.css
+++ b/src/css/Intro.module.css
@@ -14,7 +14,7 @@
 
 .introUp {
     composes: intro;
-    top: -1000px;
+    top: -100%;
     transition: 1s;
 }
 
